--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,10 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.6.1",
-    "@socket.io/admin-ui": "^0.5.1"
+    "http-proxy-middleware": "^2.0.6",
+    "socket.io": "^4.6.1"
   }
 }
