--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-webcam": "^6.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^4.6.1",
